--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
+language: generic
 sudo: required
+
 services:
   - docker
+
 before_install:
   - docker build -t diesel457/docker-react -f Dockerfile.dev .
+
 script:
-  - docker run diesel457/docker-react npm run test -- --coverage
+  - docker run -e CI=true diesel457/docker-react npm run test
