--- a/.travis.yml
+++ b/.travis.yml
@@ -11,14 +11,14 @@ script:
   - docker run -e CI=true diesel457/docker-react npm run test
 
 deploy:
-  provider: elasticbeanstalk
-  region: us-east-2
-  app: docker-react
-  env: DockerReact-env
-  bucket_name: elasticbeanstalk-us-east-2-217912934681
-  bucket_path: docker-react
+  provider: "elasticbeanstalk"
+  region: "us-east-2"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-us-east-2-217912934681"
+  bucket_path: "docker-react"
   on:
     branch: master
-  access_key_id: $AWS_ACCESS_KEY
+  access_key_id: "$AWS_ACCESS_KEY"
   secret_access_key:
-    secure: $AWS_SECRET_KEY
+    secure: "$AWS_SECRET_KEY"
